# TexSAW-2025

crypto/Three Ring Circus/: README.md  calculate_points.py  challenge.py  generate_encrypted_message.py  utils.py
crypto/VENONA/: MESSAGES.txt  VENONA.txt  diana-cipher-solution.py  diana-solution-md.md
crypto/key-reuse/: README.md
crypto/who-made-this-anyway/: README.md
forensics/beneath-the-wavs/: readme.md
forensics/deleted-evidence/: CMakeLists.txt  README.md  generator.cpp
forensics/deleted-evidence/Short/: seed_08.txt  seed_23.txt  seed_3B.txt  seed_3C.txt  seed_55.txt  seed_68.txt  seed_6C.txt  seed_89.txt  seed_8A.txt  seed_9D.txt  seed_C1.txt  seed_FE.txt
forensics/favorite-flower/: README.md
forensics/freaky-flower/: README.md
forensics/nsa-fr-fr/: README.md  chal_creator.py
forensics/scrambled-packets/: README.md  cap.pcap
forensics/spectrum-intercept/: README
forensics/string-symphony/: README.md  cello.c  chords.py  viola.c  violin1.c  violin2.c
misc/determinism/: README.md  grading_url.txt
misc/myAwesomePythonHomeworkAssignment/: Dockerfile  README.md  docker-compose.yml  flag.txt  solve.py
misc/nondeterminism/: README.md
osint/cryptolinguistics/: README.md
osint/pottermania_part1/: README.md
osint/security-questions-1/: README.md
osint/security-questions-2/: README.md
osint/security-questions-3/: README.md
osint/tanpin/: README.md
pwn/8-bytes/: 8_Bytes  8_Bytes.c  Dockerfile  Makefile  README.md  docker-compose.yml  flag.txt
pwn/easy-print-f/: Makefile  README  docker-compose.yml  flag.txt  sol.py  vuln.c
(+78 files in other folders)
